# Product-Search-With-Text-and-Image-Embeddings

./: .dockerignore  .gitignore  CLIP.ipynb  Caption Generator.ipynb  Dataset Generator.ipynb  Dockerfile  Generate All Embeddings.ipynb  Image Embeddings Generator copy.ipynb  Inference API.ipynb  Inference Triton.ipynb  Llava and Clip.ipynb  README.md  Text Embeddings Generator.ipynb  app.py  check-triton.ipynb  command_list.txt  commands.txt  dataset_generate.ipynb  db.py  docker-compose.yml  emdeddings.ipynb  image_onnx.ipynb  load_mongodb.py  main.ipynb  pyproject.toml  requirements.txt  sentence.ipynb  start.sh  tensorrt.ipynb  test.ipynb  text.ipynb
Check Runs/: Inference Triton.ipynb  text_onnx.ipynb
ONNX Resources/: nomic-embed-vision-v1.5.ipynb
Triton Server/: CMD to run.txt  app.py  requirements.txt  start.sh
Triton Server/ONNX Resources/: UAE-Large-V1.ipynb
pages/: 1_other.py  Image Search.py  Text Search.py
triton-app/: .dockerignore  CMD to run.txt  README.md  app.py  dockerfile  requirements.txt  start.sh
triton-app/ONNX Resources/: UAE-Large-V1.ipynb  nomic-embed-vision-v1.5.ipynb
