[project]
name = "product-search-with-text-and-image-embeddings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.13.2",
    "gradio>=6.12.0",
    "ipykernel>=7.2.0",
    "numpy>=2.4.4",
    "pillow>=12.2.0",
    "pymongo>=4.16.0",
    "requests>=2.33.1",
]
